--- a/index.html
+++ b/index.html
@@ -8,45 +8,8 @@
 
 <body>
 	<h1><a target="_blank" href="https://skillbox.ru/">Skillbox</a></h1>
-	<a href="program.html">program.html</a>
-	<h2>Программа курса</h2>
-	<ol>
-		<li><a href="#sylka">Якорный переход</a></li>
-		<li>Изучить материалы</li>
-		<li>Сделать домашнее задание</li>
-	</ol>
-	<h2>Описание курса</h2>
-	<p>Вы познакомитесь со стандартами Web 2.0, научитесь работать с макетами и форматировать код, освоите адаптивную
-		верстку, а <b>по итогу</b> - сможете создавать быстрые и удобные сайты, которые <b>точно понравятся
-			пользователям</b></p>
-	<p>-</p>
-	<p>Вы поймете назначение <i>основных тегов HTML</i>, сможете <s>без усилий</s> стилизовать и размещать элементы с
-		помощью CSS и сверстаете свой первый макет</p>
-	<img src="img/2.7_site.webp" width="300" alt="Картинка">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa fuga eligendi voluptates beatae a quia architecto
-		ducimus laudantium deleniti, modi temporibus, ad tempore voluptatem ipsum earum nemo doloremque accusantium
-		facere.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident beatae repellat inventore necessitatibus
-		quisquam, aspernatur a sint delectus rerum, vero, porro recusandae sit distinctio quos atque. Expedita delectus
-		quidem aliquam.
-		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At necessitatibus odit, porro amet! Tenetur earum
-		mollitia, sapiente aut facilis porro dolorum, dignissimos vitae ducimus obcaecati amet maiores minima non illum!
-	</p>
-	<h2><a id="sylka">Якорный переход</a></h2>
-	<ul>
-		<li>Основы верстки</li>
-		<li>HTML</li>
-		<li>Формы и медиаэлементы</li>
-		<li>Доступность</li>
-		<li>Работа с макетом</li>
-		<li>CSS</li>
-		<li>Практика Flexbox</li>
-		<li>Адаптивность и кроссбраузерность</li>
-		<li>JavaScript для верстальщика</li>
-		<li>Бонус. Практикум</li>
-	</ul>
-	<a href="doc/2.7_Skillbox_Layout.docx" download>Скачать файл</a>
-	<button onclick="alert(`Привет, верстка!`)">Нажать</button>
+	<a href="doc/2.7_Skillbox_Layout.docx" download>Скачать программу курса</a>
+	<a href="program.html">Подробнее</a>
 </body>
 
 </html>
