--- a/program.html
+++ b/program.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Program.html</title>
+	<title>Document</title>
+	<style type="text/css">
+		TABLE {
+			border-collapse: collapse;
+		}
+	
+		TR,TD, TH {
+			padding: 5px;
+			border: 1px solid black;
+		}
+	</style>
 </head>
+
 <body>
+	<a target="_blank" href="index.html">Назад</a>
+	<h1>Информация о курсе</h1>
+	
+	<h2>Программа курса</h2>
+	<ol>
+		<li><a href="#tegi">Изучить теги</a></li>
+		<li>Попрактиковаться</li>
+		<li>Выполнить домашнее задание</li>
+	</ol>
+	<h2>Описание курса</h2>
+	<p>Вы познакомитесь со стандартами Web 2.0, научитесь работать с макетами и форматировать код, освоите адаптивную
+		верстку, а <b>по итогу</b> - сможете создавать быстрые и удобные сайты, которые <b>точно понравятся
+			пользователям</b></p>
+	<p>-</p>
+	<p>Вы поймете назначение <i>основных тегов HTML</i>, сможете <s>без усилий</s> стилизовать и размещать элементы с
+		помощью CSS и сверстаете свой первый макет</p>
+		<figure>
+			<img src="img/2.7_site1.jpeg" width="300" alt="Картинка">
+			<figcaption>Курсовая работа</figcaption>
+		</figure>
+	<p>Вторая часть курса сделает из вас настоящего мастера. Вы изучите сборщики проектов, научитесь верстать e-mail рассылки, разберетесь с анимацией на сайте.</p>
+	<p>Помимо этого, вы сверстаете фрагмент из интернет-магазина - главную страницу, страницу каталога и страницу товара</p>
+	<figure>
+		<img src="img/2.7_site2.jpeg" width="300" alt="Картинка">
+		<figcaption>Дипломный проект</figcaption>
+	</figure>
+	<h2>Программа курса</h2>
+	<ul>
+		<li>Основы верстки</li>
+		<li>HTML</li>
+		<li>Формы и медиаэлементы</li>
+		<li>Доступность</li>
+		<li>Работа с макетом</li>
+		<li>CSS</li>
+		<li>Практика Flexbox</li>
+		<li>Адаптивность и кроссбраузерность</li>
+		<li>JavaScript для верстальщика</li>
+		<li>Бонус. Практикум</li>
+		<li>Работа с хостингом</li>
+		<li>Курсовая. Мини-проект в портфолио</li>
+	</ul>
+
+	<table id="tegi" align="left" cellpadding="4" cols="4">
+		<tr>
+		<td colspan="4" align="center">Таблица тегов</td>
+		</tr>
+		<tr>
+	      <th colspan="2">Блочные</th>
+	      <th colspan="2">Строчные</th>
+      </tr>
+      <tr>
+	      <td>&#60;div&#62;Див&#60;&#47;div&#62;</td>
+	      <td>Тег div - строительный кирпичик без смысловой нагрузки</td>
+	      <td>&#60;span&#62;Спан&#60;&#47;span&#62;</td>
+	      <td>Текстовый тег без смысловой нагрузки</td>
+      </tr>
+      <tr>
+	      <td>&#60;p&#62;Параграф&#60;&#47;p&#62;</td>
+	      <td>Тег р - параграф текста</td>
+	      <td>&#60;a href="#"&#62;Ссылка&#60;&#47;a&#62;</td>
+	      <td>Тег ссылки</td>
+      </tr>
+      <tr>
+	      <td>&#60;h1&#62;Заголовок&#60;&#47;h1&#62;</td>
+	      <td>Тег заголовка. Различают 6 типов заголовков - h1-h6</td>
+	      <td>&#60;img src="#" alt="Картинка"&#62;</td>
+	      <td>Тег картинки</td>
+      </tr>
+      <tr>
+	      <td>&#60;ul&#62;Список&#60;&#47;ul&#62;</td>
+	      <td>Тег нумерованного списка. Есть также нумерованный - ol</td>
+	      <td>&#60;i&#62;Курсивный текст&#60;&#47;i&#62;</td>
+	      <td>Тег для выделения текста курсивом</td>
+      </tr>
+      <tr>
+	      <th colspan="4">Теперь вы знаете основные HTML-теги</th>
+      </tr>
+   </table>
+
+	
 	
 </body>
+
 </html>
