--- a/program.html
+++ b/program.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<style type="text/css">
+	<style>
 		TABLE {
 			border-collapse: collapse;
 		}
@@ -59,9 +59,9 @@
 		<li>Курсовая. Мини-проект в портфолио</li>
 	</ul>
 
-	<table id="tegi" align="left" cellpadding="4" cols="4">
+	<table id="tegi" align="left" cellpadding="4">
 		<tr>
-		<td colspan="4" align="center">Таблица тегов</td>
+		<td colspan="4">Таблица тегов</td>
 		</tr>
 		<tr>
 	      <th colspan="2">Блочные</th>
